--- a/Examples-histogram.ipynb
+++ b/Examples-histogram.ipynb
@@ -52,12 +52,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### plot histogram of a series"
+    "## pass a series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -65,10 +65,10 @@
     {
      "data": {
       "text/html": [
-       "<script src=\"zingchart_js/zingchart.min.js\"></script><script>zingchart.MODULESDIR=\"zingchart_js/modules/\";</script><div id='61712bdf-0530-4ee0-8983-bf86cbb1e129'></div>\n",
+       "<script src=\"zingchart_js/zingchart.min.js\"></script><script>zingchart.MODULESDIR=\"zingchart_js/modules/\";</script><div id='21da8a52-c884-40d9-b762-0991e7b786f5'></div>\n",
        "        <script>\n",
        "            zingchart.render({\n",
-       "            id:'61712bdf-0530-4ee0-8983-bf86cbb1e129',\n",
+       "            id:'21da8a52-c884-40d9-b762-0991e7b786f5',\n",
        "            height:400,\n",
        "            width:600,\n",
        "            data:{\"graphset\": [{\"series\": [{\"values\": [9, 23, 14, 27, 16, 26, 18, 6, 5, 6]}], \"scale-x\": {\"values\": [4.3, 4.66, 5.02, 5.38, 5.74, 6.1, 6.46, 6.82, 7.18, 7.54, 7.9]}, \"type\": \"bar\", \"tooltip\": {\"border-radius\": \"8px\", \"font-size\": \"12px\", \"text\": \"<b>Value: %k</b><br><b>Count: %v</b>\", \"padding\": \"5px 5px\", \"alpha\": 0.9, \"text-align\": \"left\"}, \"title\": {\"text\": \"Histogram\", \"background-color\": \"none\", \"font-color\": \"#000000\"}}], \"background-color\": \"#3F5666\"}\n",
@@ -80,7 +80,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
