--- a/pyzingchart/Examples-histogram.ipynb
+++ b/pyzingchart/Examples-histogram.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -53,6 +44,44 @@
    "metadata": {},
    "source": [
     "## pass a series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe srcdoc=\"\n",
+       "    <head>\n",
+       "        <script src=&quot;http://cdn.zingchart.com/zingchart.min.js&quot;></script>\n",
+       "        <script>zingchart.MODULESDIR=&quot;http://cdn.zingchart.com/modules/&quot;;</script>\n",
+       "    </head>\n",
+       "    <div id=&quot;zingchart-plot&quot;></div><script>\n",
+       "    zingchart.render({\n",
+       "        &quot;id&quot;: &quot;zingchart-plot&quot;\n",
+       "        , &quot;width&quot;: 600\n",
+       "        , &quot;height&quot;: 400\n",
+       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [9, 23, 14, 27, 16, 26, 18, 6, 5, 6], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.66, 5.02, 5.38, 5.74, 6.1, 6.46, 6.82, 7.18, 7.54, 7.9]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;Histogram&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}]}\n",
+       "    });\n",
+       "    </script>\" style='width:100%; height: 500px; border: none'></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot_data = plots.histogram(iris['sepal length (cm)'])\n",
+    "utils.ipython_plot_zingchart(plot_data)"
    ]
   },
   {
@@ -75,7 +104,7 @@
        "        &quot;id&quot;: &quot;zingchart-plot&quot;\n",
        "        , &quot;width&quot;: 600\n",
        "        , &quot;height&quot;: 400\n",
-       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [9, 23, 14, 27, 16, 26, 18, 6, 5, 6]}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.66, 5.02, 5.38, 5.74, 6.1, 6.46, 6.82, 7.18, 7.54, 7.9]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;Histogram&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}], &quot;background-color&quot;: &quot;#3F5666&quot;}\n",
+       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [4, 5, 7, 16, 9, 5, 13, 14, 10, 6, 10, 16, 7, 11, 4, 2, 4, 1, 5, 1], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.48, 4.66, 4.84, 5.02, 5.2, 5.38, 5.56, 5.74, 5.92, 6.1, 6.28, 6.46, 6.64, 6.82, 7.0, 7.18, 7.36, 7.54, 7.72, 7.9]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;Histogram&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}]}\n",
        "    });\n",
        "    </script>\" style='width:100%; height: 500px; border: none'></iframe>"
       ],
@@ -89,8 +118,15 @@
     }
    ],
    "source": [
-    "plot_data = plots.histogram(iris['sepal length (cm)'])\n",
+    "plot_data = plots.histogram(iris['sepal length (cm)'], bins=20)\n",
     "utils.ipython_plot_zingchart(plot_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## pass a dataframe"
    ]
   },
   {
@@ -113,7 +149,7 @@
        "        &quot;id&quot;: &quot;zingchart-plot&quot;\n",
        "        , &quot;width&quot;: 600\n",
        "        , &quot;height&quot;: 400\n",
-       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [4, 5, 7, 16, 9, 5, 13, 14, 10, 6, 10, 16, 7, 11, 4, 2, 4, 1, 5, 1]}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.48, 4.66, 4.84, 5.02, 5.2, 5.38, 5.56, 5.74, 5.92, 6.1, 6.28, 6.46, 6.64, 6.82, 7.0, 7.18, 7.36, 7.54, 7.72, 7.9]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;Histogram&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}], &quot;background-color&quot;: &quot;#3F5666&quot;}\n",
+       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [4, 5, 7, 16, 9, 5, 13, 14, 10, 6, 10, 16, 7, 11, 4, 2, 4, 1, 5, 1], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.48, 4.66, 4.84, 5.02, 5.2, 5.38, 5.56, 5.74, 5.92, 6.1, 6.28, 6.46, 6.64, 6.82, 7.0, 7.18, 7.36, 7.54, 7.72, 7.9]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;sepal length (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [1, 3, 4, 3, 8, 14, 14, 10, 26, 12, 19, 12, 6, 3, 9, 2, 1, 1, 1, 1], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [2.0, 2.12, 2.24, 2.36, 2.48, 2.6, 2.72, 2.84, 2.96, 3.08, 3.2, 3.32, 3.44, 3.56, 3.68, 3.8, 3.92, 4.04, 4.16, 4.28, 4.4]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;sepal width (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [4, 33, 11, 2, 0, 0, 1, 2, 3, 5, 12, 14, 12, 17, 6, 12, 7, 4, 2, 3], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [1.0, 1.3, 1.59, 1.89, 2.18, 2.48, 2.77, 3.07, 3.36, 3.66, 3.95, 4.25, 4.54, 4.84, 5.13, 5.43, 5.72, 6.02, 6.31, 6.6, 6.9]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;petal length (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [34, 7, 7, 1, 1, 0, 0, 7, 3, 5, 21, 12, 4, 2, 12, 11, 6, 3, 8, 6], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [0.1, 0.22, 0.34, 0.46, 0.58, 0.7, 0.82, 0.94, 1.06, 1.18, 1.3, 1.42, 1.54, 1.66, 1.78, 1.9, 2.02, 2.14, 2.26, 2.38, 2.5]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;petal width (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}]}\n",
        "    });\n",
        "    </script>\" style='width:100%; height: 500px; border: none'></iframe>"
       ],
@@ -122,51 +158,6 @@
       ]
      },
      "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plot_data = plots.histogram(iris['sepal length (cm)'], bins=20)\n",
-    "utils.ipython_plot_zingchart(plot_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## pass a dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe srcdoc=\"\n",
-       "    <head>\n",
-       "        <script src=&quot;http://cdn.zingchart.com/zingchart.min.js&quot;></script>\n",
-       "        <script>zingchart.MODULESDIR=&quot;http://cdn.zingchart.com/modules/&quot;;</script>\n",
-       "    </head>\n",
-       "    <div id=&quot;zingchart-plot&quot;></div><script>\n",
-       "    zingchart.render({\n",
-       "        &quot;id&quot;: &quot;zingchart-plot&quot;\n",
-       "        , &quot;width&quot;: 600\n",
-       "        , &quot;height&quot;: 400\n",
-       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [4, 5, 7, 16, 9, 5, 13, 14, 10, 6, 10, 16, 7, 11, 4, 2, 4, 1, 5, 1]}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.48, 4.66, 4.84, 5.02, 5.2, 5.38, 5.56, 5.74, 5.92, 6.1, 6.28, 6.46, 6.64, 6.82, 7.0, 7.18, 7.36, 7.54, 7.72, 7.9]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;sepal length (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [1, 3, 4, 3, 8, 14, 14, 10, 26, 12, 19, 12, 6, 3, 9, 2, 1, 1, 1, 1]}], &quot;scale-x&quot;: {&quot;values&quot;: [2.0, 2.12, 2.24, 2.36, 2.48, 2.6, 2.72, 2.84, 2.96, 3.08, 3.2, 3.32, 3.44, 3.56, 3.68, 3.8, 3.92, 4.04, 4.16, 4.28, 4.4]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;sepal width (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [4, 33, 11, 2, 0, 0, 1, 2, 3, 5, 12, 14, 12, 17, 6, 12, 7, 4, 2, 3]}], &quot;scale-x&quot;: {&quot;values&quot;: [1.0, 1.3, 1.59, 1.89, 2.18, 2.48, 2.77, 3.07, 3.36, 3.66, 3.95, 4.25, 4.54, 4.84, 5.13, 5.43, 5.72, 6.02, 6.31, 6.6, 6.9]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;petal length (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [34, 7, 7, 1, 1, 0, 0, 7, 3, 5, 21, 12, 4, 2, 12, 11, 6, 3, 8, 6]}], &quot;scale-x&quot;: {&quot;values&quot;: [0.1, 0.22, 0.34, 0.46, 0.58, 0.7, 0.82, 0.94, 1.06, 1.18, 1.3, 1.42, 1.54, 1.66, 1.78, 1.9, 2.02, 2.14, 2.26, 2.38, 2.5]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;petal width (cm)&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}], &quot;background-color&quot;: &quot;#3F5666&quot;}\n",
-       "    });\n",
-       "    </script>\" style='width:100%; height: 500px; border: none'></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +207,7 @@
        "        &quot;id&quot;: &quot;zingchart-plot&quot;\n",
        "        , &quot;width&quot;: 600\n",
        "        , &quot;height&quot;: 400\n",
-       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [4, 1, 6, 5, 12, 8, 4, 5, 2, 3]}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.45, 4.6, 4.75, 4.9, 5.05, 5.2, 5.35, 5.5, 5.65, 5.8]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;setosa&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [4, 1, 6, 10, 5, 8, 5, 3, 5, 3]}], &quot;scale-x&quot;: {&quot;values&quot;: [4.9, 5.11, 5.32, 5.53, 5.74, 5.95, 6.16, 6.37, 6.58, 6.79, 7.0]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;versicolor&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [1, 0, 5, 5, 8, 9, 10, 5, 1, 6]}], &quot;scale-x&quot;: {&quot;values&quot;: [4.9, 5.2, 5.5, 5.8, 6.1, 6.4, 6.7, 7.0, 7.3, 7.6, 7.9]}, &quot;type&quot;: &quot;bar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;virginica&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}], &quot;background-color&quot;: &quot;#3F5666&quot;}\n",
+       "        , &quot;data&quot;: {&quot;graphset&quot;: [{&quot;series&quot;: [{&quot;values&quot;: [4, 1, 6, 5, 12, 8, 4, 5, 2, 3], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [4.3, 4.45, 4.6, 4.75, 4.9, 5.05, 5.2, 5.35, 5.5, 5.65, 5.8]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;setosa&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [4, 1, 6, 10, 5, 8, 5, 3, 5, 3], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [4.9, 5.11, 5.32, 5.53, 5.74, 5.95, 6.16, 6.37, 6.58, 6.79, 7.0]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;versicolor&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}, {&quot;series&quot;: [{&quot;values&quot;: [1, 0, 5, 5, 8, 9, 10, 5, 1, 6], &quot;background-color&quot;: &quot;#85d6e4&quot;}], &quot;scale-x&quot;: {&quot;values&quot;: [4.9, 5.2, 5.5, 5.8, 6.1, 6.4, 6.7, 7.0, 7.3, 7.6, 7.9]}, &quot;type&quot;: &quot;vbar&quot;, &quot;tooltip&quot;: {&quot;border-radius&quot;: &quot;8px&quot;, &quot;font-size&quot;: &quot;12px&quot;, &quot;text&quot;: &quot;<b>Value: %k</b><br><b>Count: %v</b>&quot;, &quot;padding&quot;: &quot;5px 5px&quot;, &quot;alpha&quot;: 0.9, &quot;text-align&quot;: &quot;left&quot;}, &quot;title&quot;: {&quot;text&quot;: &quot;virginica&quot;, &quot;background-color&quot;: &quot;none&quot;, &quot;font-color&quot;: &quot;#000000&quot;}}]}\n",
        "    });\n",
        "    </script>\" style='width:100%; height: 500px; border: none'></iframe>"
       ],
@@ -224,7 +215,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
