--- a/pydcjs/snack-visualization/process-data.ipynb
+++ b/pydcjs/snack-visualization/process-data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +365,7 @@
        "2                 -118.298306    Koreatown  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -388,29 +388,7 @@
     "                 \"why\", \"latitude\", \"longitude\", \"neighborhood\"]\n",
     "timestamp = map(lambda s: datetime.strptime(s, \"%Y-%m-%d %H:%M:%S\"), snacks[\"timestamp\"])\n",
     "snacks[\"date\"] = map(lambda ts: ts.strftime(\"%Y-%m-%d\"), timestamp)\n",
-    "snacks[\"hour\"] = map(lambda ts: ts.strftime(\"%H\"), timestamp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('2012-03-28', '2012-06-04')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snacks.date.min(), snacks.date.max()"
+    "snacks[\"hour\"] = np.asarray(map(lambda ts: ts.strftime(\"%H\"), timestamp), dtype = np.int)"
    ]
   },
   {
