first version of pydcjs - snack case

--- a/pydcjs/snack-visualization/process-data.ipynb
+++ b/pydcjs/snack-visualization/process-data.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +365,7 @@
        "2                 -118.298306    Koreatown  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,23 +377,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "## simplify column names and add new columns\n",
-    "snacks.columns = [\"timestamp\", \"healthlevel\", \"cost\", \"imageid\", \"location\", \"period\", \"snacks\", \"withwho\", \n",
+    "snacks.columns = [\"timestamp\", \"healthlevel\", \"cost\", \"imageid\", \"location\", \"period\", \"what\", \"withwho\", \n",
     "                 \"why\", \"latitude\", \"longitude\", \"neighborhood\"]\n",
     "timestamp = map(lambda s: datetime.strptime(s, \"%Y-%m-%d %H:%M:%S\"), snacks[\"timestamp\"])\n",
     "snacks[\"date\"] = map(lambda ts: ts.strftime(\"%Y-%m-%d\"), timestamp)\n",
-    "snacks[\"hour\"] = np.asarray(map(lambda ts: ts.strftime(\"%H\"), timestamp), dtype = np.int)"
+    "snacks[\"hour\"] = np.asarray(map(lambda ts: ts.strftime(\"%H\"), timestamp), dtype = np.int)\n",
+    "snacks[\"what_wordlen\"] = map(lambda what: len(what), snacks.what)\n",
+    "snacks[\"why_wordlen\"] = map(lambda why: len(why), snacks.why)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
